samples/_failures_safe/1761633198_05a775_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d8c4064.c: In function ‘main’:
./samples/SAFE/__tmp_8d8c4064.c:128:12: error: missing terminating " character
  128 |     printf("Vector difference: (%
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8d8c4064.c:128:5: error: expected expression at end of input
  128 |     printf("Vector difference: (%
      |     ^~~~~~
./samples/SAFE/__tmp_8d8c4064.c:128:5: error: expected declaration or statement at end of input
